[package]
name = "daiban"
version = "0.1.0"
description = "本地笔记、待办与日历桌面应用"
authors = ["orange"]
edition = "2021"

[lib]
name = "daiban_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

brotli = "=8.0.2"
brotli-decompressor = "=5.0.0"
alloc-no-stdlib = "=2.0.4"
alloc-stdlib = "=0.2.2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
